Fixed scrolling and word wrap. The tasks can now be moved easily even when the user has scrolled down. Before it would jump around the page, due to the offset being calculated from a relative value, but used as an absolute value. Changing the css for the task class prevents the text from getting out of the box. This way there is no horizontal scrolling.

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,9 @@
     background-color:beige;
     color : black;
     padding: 5px;
-
+    word-wrap: break-word;
+    word-break: break-all;
+    max-width: 100%;
 }
 .resolution{
     grid-area: resolution;
